# LambdaHack

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  .travis.yml.7.4.2  .travis.yml.prof  .windows.installer.nsi  AUTHORS  Actor.hs  Allure.cabal  CHANGELOG.md  CLAUDE.md  COPYLEFT  COPYRIGHT  CREDITS  Color.hs  Curses.hsc  DESIGN.markdown  Display.hs  Display2.hs  Dungeon.hs  FOV.hs  File.hs  Frequency.hs  Geometry.hs  Item.hs  LICENSE  LambdaHack.cabal  LambdaHack.cabal.bkp  LambdaHack.cabal.flattened  LambdaHack.config.example  LambdaHack.hs  LambdaHack.scores  Level.hs  Main.hs  MainMenu.ascii  Makefile  Message.hs  Monster.hs  PLAYING.markdown  (+28 more)
.github/workflows/: haskell-ci.yml  haskell.yml  lint-and-playtest.yml
Display/: Curses.hs  Gtk.hs  Vty.hs
DumbBot/: Main.hs
Game/LambdaHack/: Ability.hs  Action.hs  ActionClass.hs  ActionType.hs  Actions.hs  Actor.hs  ActorAdd.hs  ActorState.hs  Animation.hs  Area.hs  AreaRnd.hs  Atomic.hs  AtomicCmd.hs  AtomicPos.hs  AtomicSem.hs  Binding.hs  BindingAction.hs  CDefs.hs  Cave.hs  Client.hs  ClientAction.hs  ClientCmd.hs  CmdAtomic.hs  CmdAtomicSem.hs  CmdCli.hs  CmdSer.hs  Color.hs  Command.hs  CommandAction.hs  Config.hs  ConfigDefault.hs  Content.hs  ContentDef.hs  Dir.hs  Display.hs  Draw.hs  Dungeon.hs  DungeonState.hs  Effect.hs  EffectAction.hs  (+53 more)
Game/LambdaHack/Action/: ActionLift.hs  ConfigIO.hs  Frontend.hs  HighScore.hs  MonadAction.hs  OpsMonadAction.hs  Save.hs
Game/LambdaHack/Atomic/: BroadcastAtomicWrite.hs  CmdAtomic.hs  HandleAndBroadcastWrite.hs  HandleAtomicWrite.hs  HandleCmdAtomicWrite.hs  MonadAtomic.hs  MonadStateWrite.hs  MonadWriteState.hs  PosAtomicRead.hs  PosCmdAtomicRead.hs
Game/LambdaHack/Client/: AI.hs  Action.hs  Animation.hs  AtomicSemCli.hs  Bfs.hs  BfsClient.hs  BfsM.hs  Binding.hs  ClientOptions.hs  ClientSem.hs  CmdAtomicCli.hs  CmdAtomicUI.hs  CmdCliSem.hs  CmdHuman.hs  CmdHumanAction.hs  CmdHumanSem.hs  CmdPlayer.hs  CmdPlayerAction.hs  CommonClient.hs  CommonM.hs  Config.hs  ConfigIO.hs  ConfigUI.hs  Draw.hs  FileClient.hs  FileM.hs  GlobalAction.hs  HandleAtomicClient.hs  HandleAtomicM.hs  HandleCmdAtomicClient.hs  HandleResponseClient.hs  HandleResponseM.hs  HumanCmd.hs  HumanGlobal.hs  HumanLocal.hs  HumanSem.hs  Inventory.hs  ItemSlot.hs  Key.hs  LocalAction.hs  (+17 more)
Game/LambdaHack/Common/: Ability.hs  Action.hs  Actor.hs  ActorState.hs  Analytics.hs  Animation.hs  Area.hs  AtomicCmd.hs  AtomicPos.hs  AtomicSem.hs  ClientCmd.hs  ClientOptions.hs  Color.hs  ConfigIO.hs  Container.hs  ContentData.hs  ContentDef.hs  Defs.hs  Dice.hs  Effect.hs  EffectDescription.hs  Faction.hs  Feature.hs  File.hs  Flavour.hs  Fov.hs  FovDigital.hs  Frequency.hs  HSFile.hs  HighScore.hs  HumanCmd.hs  Item.hs  ItemAspect.hs  ItemDescription.hs  ItemFeature.hs  ItemStrongest.hs  JSFile.hs  Key.hs  Kind.hs  KindOps.hs  (+24 more)
Game/LambdaHack/Content/: ActorKind.hs  CaveKind.hs  Content.hs  FactionKind.hs  ItemKind.hs  ModeKind.hs  PlaceKind.hs  RoomKind.hs  RuleKind.hs  StrategyKind.hs  TileKind.hs
Game/LambdaHack/Core/: Dice.hs  Point.hs  Random.hs
Game/LambdaHack/Definition/: Color.hs  ContentData.hs  Defs.hs  Flavour.hs
Game/LambdaHack/Display/: Curses.hs  Gtk.hs  Std.hs  Vty.hs
Game/LambdaHack/FOV/: Common.hs  Digital.hs  Permissive.hs  Shadow.hs
Game/LambdaHack/Frontend/: Chosen.hs  Curses.hs  Gtk.hs  Std.hs  Vty.hs
Game/LambdaHack/SampleImplementation/: SampleImplementationMonadClient.hs  (+4 more)
GameDefinition/: InGameHelp.txt  Main.hs  MainMenu.ascii  MoveKeys.txt  PLAYING.md  TieKnot.hs  config.rules.default  config.ui.default  index.html  scores
GameDefinition/Content/: ActorKind.hs  CaveKind.hs  FactionKind.hs  ItemKind.hs  ItemKindActor.hs  ItemKindBlast.hs  ItemKindBodyPart.hs  ItemKindEmbed.hs  ItemKindOrgan.hs  ItemKindShrapnel.hs  ItemKindTempAspect.hs  ItemKindTemporary.hs  ModeKind.hs  ModeKindPlayer.hs  PlaceKind.hs  PlayerKind.hs  RuleKind.hs  TileKind.hs
GameDefinition/Implementation/: MonadClientImplementation.hs  MonadServerImplementation.hs  TieKnot.hs
GameDefinition/fonts/: 16x16x.fnt  16x16x.fon  16x16x.less.bulbous.fnt  16x16xw.bdf  8x8x.fnt  8x8x.fon  8x8xb.fnt  8x8xb.fon  LICENSE.DejaVu
GameDefinition/game-src/: TieKnot.hs
GameDefinition/src/: Main.hs
LambdaHack/: ConfigDefault.hs  Main.hs  Multiline.hs
LambdaHack/Content/: ActorKind.hs  CaveKind.hs  FactionKind.hs  ItemKind.hs  ModeKind.hs  PlaceKind.hs  RoomKind.hs  RuleKind.hs  StrategyKind.hs  TileKind.hs
cbits/: config.h.in  utils.c  utils.h
docs/: leader-desync-bug.md  promptgetkey-hygiene.md  wasm-frontend-unified-plan.md
src/: Action.hs  Actions.hs  Actor.hs  ActorAdd.hs  ActorKind.hs  ActorState.hs  Area.hs  AreaRnd.hs  Assert.hs  Attr.hs  Bot.hs  Cave.hs  Color.hs  Command.hs  Config.hs  ConfigDefault.hs  Content.hs  Dir.hs  Display.hs  Display2.hs  Dungeon.hs  DungeonState.hs  Effect.hs  EffectAction.hs  Event.hs  FOV.hs  Feature.hs  File.hs  Flavour.hs  Frequency.hs  Geometry.hs  GeometryRnd.hs  Grammar.hs  Hero.hs  HeroState.hs  HighScores.hs  Item.hs  ItemAction.hs  ItemKind.hs  ItemState.hs  (+32 more)
src/Content/: ActorKind.hs  CaveKind.hs  Content.hs  ItemKind.hs  TileKind.hs
src/Display/: Curses.hs  Gtk.hs  Std.hs  Vty.hs
src/FOV/: Common.hs  Digital.hs  Permissive.hs  Shadow.hs
src/Utils/: Assert.hs  File.hs  Multiline.hs
test/: ActorStateUnitTests.hs  CommonMUnitTests.hs  FrameMUnitTests.hs  HandleHelperMUnitTests.hs  HandleHumanGlobalMUnitTests.hs  HandleHumanLocalMUnitTests.hs  InventoryMUnitTests.hs  ItemDescriptionUnitTests.hs  ItemKindUnitTests.hs  ItemRevUnitTests.hs  ItemRevUnitTests.hs.orig  LevelUnitTests.hs  MonadClientMock.hs  MonadClientUIUnitTests.hs  PointUnitTests.hs  ReqFailureUnitTests.hs  SessionUIMock.hs  SessionUIUnitTests.hs  Spec.hs  UnitTestHelpers.hs  doctest-driver.hs  doctests.hs  test.hs
tools/: check-plan-citations.py  heading-outline.py
ts-src/: package-lock.json  package.json  run-wasm-test.mjs  tsconfig.json
ts-src/src/: loader.ts  serve-core.test.ts  serve-core.ts  serve.ts  terminal-core.test.ts  terminal-core.ts  terminal.ts
(+310 files in other folders)
